--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.5'
 services:
     api:
       container_name: "ct-api-develop"
-      build: "./docker/go-app-develop"
-      volumes:
-        - ".:${GO_PROJECT_DIR}"
+      build:
+        context: .
+        dockerfile: ./docker/go-app-develop/Dockerfile
       ports:
-        - "8086:8080"
+        - "8080:8080"
       environment:
         GO_WORK_DIR: "${GO_PROJECT_DIR}"
     postgres:
