--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -31,9 +31,6 @@ spec:
             - name: PGDATABASE
               value: mphclub
             - name: PGPASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: pgpassword
-                  key: PGPASSWORD
+              value: mphclub123
       imagePullSecrets:
-        - name: us-east-1-ecr-registry
+        - name: awsecr-cred
