--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -32,5 +32,7 @@ spec:
               value: mphclub
             - name: PGPASSWORD
               value: mphclub123
+            - name: AWS_BUCKET
+              value: mphclub-photos
       imagePullSecrets:
         - name: awsecr-cred
