--- a/docker/go-app-develop/Dockerfile
+++ b/docker/go-app-develop/Dockerfile
@@ -1,7 +1,10 @@
 FROM golang:1.9-alpine as builder
 WORKDIR /go/src/mphclub-rest-server
 COPY . .
-RUN apk update && apk add git && apk add ca-certificates
+RUN apk update && apk add git && apk add ca-certificates && apk add --no-cache curl
+RUN curl -L -s https://github.com/golang/dep/releases/download/v0.5.0/dep-linux-amd64 -o $GOPATH/bin/dep
+RUN chmod +x $GOPATH/bin/dep
+RUN dep ensure
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags="-w -s" -o ./mphclub-rest-server
 
 FROM scratch
