--- a/docker/mphclub-rest-server/Dockerfile
+++ b/docker/mphclub-rest-server/Dockerfile
@@ -1,10 +1,11 @@
 FROM golang:1.9-alpine as builder
 WORKDIR /go/src/mphclub-rest-server
-COPY . .
 RUN apk update && apk add git && apk add ca-certificates && apk add --no-cache curl
 RUN curl -L -s https://github.com/golang/dep/releases/download/v0.5.0/dep-linux-amd64 -o $GOPATH/bin/dep
 RUN chmod +x $GOPATH/bin/dep
-RUN dep ensure
+COPY Gopkg.toml Gopkg.lock ./
+RUN dep ensure -vendor-only
+COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags="-w -s" -o ./mphclub-rest-server
 
 FROM scratch
