--- a/k8s/ingress-service.yml
+++ b/k8s/ingress-service.yml
@@ -17,7 +17,7 @@ spec:
             backend:
               serviceName: cs-portal-cluster-ip-service
               servicePort: 8081
-          - path: /
+          - path: /cs-dashboard/
             backend:
               serviceName: cs-dashboard-cluster-ip-service
               servicePort: 3000
